Add media assets and platform information for LeEnglish TOEIC
- Added app icon, lesson placeholder, and splash logo images.
- Created platform_info.txt with details about the LeEnglish TOEIC platform, including features and contact information.
- Implemented PowerShell scripts for testing admin and dashboard APIs.
- Added generate_media_assets.py and requirements.txt scripts for media asset generation.